src/grammar/lambdaParser.py
# Generated from ./src/grammar/lambda.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class lambdaParser ( Parser ):

    grammarFileName = "lambda.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'::'", "'->'", "'('", "')'", "'\\'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "OP", "NUM", "ID", "CAPS", 
                      "WS", "LEXICAL_ERROR" ]

    RULE_root = 0
    RULE_type = 1
    RULE_typeRec = 2
    RULE_term = 3

    ruleNames =  [ "root", "type", "typeRec", "term" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    OP=6
    NUM=7
    ID=8
    CAPS=9
    WS=10
    LEXICAL_ERROR=11

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return lambdaParser.RULE_root

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class RegTermContext(RootContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lambdaParser.RootContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def term(self):
            return self.getTypedRuleContext(lambdaParser.TermContext,0)

        def EOF(self):
            return self.getToken(lambdaParser.EOF, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRegTerm" ):
                return visitor.visitRegTerm(self)
            else:
                return visitor.visitChildren(self)


    class TypeTermContext(RootContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lambdaParser.RootContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_(self):
            return self.getTypedRuleContext(lambdaParser.TypeContext,0)

        def EOF(self):
            return self.getToken(lambdaParser.EOF, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeTerm" ):
                return visitor.visitTypeTerm(self)
            else:
                return visitor.visitChildren(self)


    class NothingContext(RootContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lambdaParser.RootContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EOF(self):
            return self.getToken(lambdaParser.EOF, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNothing" ):
                return visitor.visitNothing(self)
            else:
                return visitor.visitChildren(self)



    def root(self):

        localctx = lambdaParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.state = 15
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                localctx = lambdaParser.RegTermContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 8
                self.term(0)
                self.state = 9
                self.match(lambdaParser.EOF)
                pass

            elif la_ == 2:
                localctx = lambdaParser.TypeTermContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 11
                self.type_()
                self.state = 12
                self.match(lambdaParser.EOF)
                pass

            elif la_ == 3:
                localctx = lambdaParser.NothingContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 14
                self.match(lambdaParser.EOF)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # Token

        def typeRec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lambdaParser.TypeRecContext)
            else:
                return self.getTypedRuleContext(lambdaParser.TypeRecContext,i)


        def OP(self):
            return self.getToken(lambdaParser.OP, 0)

        def NUM(self):
            return self.getToken(lambdaParser.NUM, 0)

        def ID(self):
            return self.getToken(lambdaParser.ID, 0)

        def getRuleIndex(self):
            return lambdaParser.RULE_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = lambdaParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17
            localctx.left = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 448) != 0)):
                localctx.left = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 18
            self.match(lambdaParser.T__0)
            self.state = 19
            self.typeRec()
            self.state = 24
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 20
                self.match(lambdaParser.T__1)
                self.state = 21
                self.typeRec()
                self.state = 26
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeRecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return lambdaParser.RULE_typeRec

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class TypeFunctionContext(TypeRecContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lambdaParser.TypeRecContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def typeRec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lambdaParser.TypeRecContext)
            else:
                return self.getTypedRuleContext(lambdaParser.TypeRecContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeFunction" ):
                return visitor.visitTypeFunction(self)
            else:
                return visitor.visitChildren(self)


    class TypeValueContext(TypeRecContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lambdaParser.TypeRecContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CAPS(self):
            return self.getToken(lambdaParser.CAPS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeValue" ):
                return visitor.visitTypeValue(self)
            else:
                return visitor.visitChildren(self)



    def typeRec(self):

        localctx = lambdaParser.TypeRecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_typeRec)
        self._la = 0 # Token type
        try:
            self.state = 41
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                localctx = lambdaParser.TypeFunctionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 27
                self.match(lambdaParser.T__2)
                self.state = 28
                self.typeRec()
                self.state = 29
                self.match(lambdaParser.T__1)
                self.state = 30
                self.typeRec()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==2:
                    self.state = 31
                    self.match(lambdaParser.T__1)
                    self.state = 32
                    self.typeRec()
                    self.state = 37
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 38
                self.match(lambdaParser.T__3)
                pass
            elif token in [9]:
                localctx = lambdaParser.TypeValueContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.match(lambdaParser.CAPS)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return lambdaParser.RULE_term

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class OpContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lambdaParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OP(self):
            return self.getToken(lambdaParser.OP, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp" ):
                return visitor.visitOp(self)
            else:
                return visitor.visitChildren(self)


    class ApplicationContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lambdaParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lambdaParser.TermContext)
            else:
                return self.getTypedRuleContext(lambdaParser.TermContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitApplication" ):
                return visitor.visitApplication(self)
            else:
                return visitor.visitChildren(self)


    class TermParenthesisContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lambdaParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def term(self):
            return self.getTypedRuleContext(lambdaParser.TermContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTermParenthesis" ):
                return visitor.visitTermParenthesis(self)
            else:
                return visitor.visitChildren(self)


    class AbstractionContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lambdaParser.TermContext
            super().__init__(parser)
            self.left = None # Token
            self.right = None # TermContext
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(lambdaParser.ID, 0)
        def term(self):
            return self.getTypedRuleContext(lambdaParser.TermContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAbstraction" ):
                return visitor.visitAbstraction(self)
            else:
                return visitor.visitChildren(self)


    class NumContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lambdaParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUM(self):
            return self.getToken(lambdaParser.NUM, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNum" ):
                return visitor.visitNum(self)
            else:
                return visitor.visitChildren(self)


    class IdContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lambdaParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(lambdaParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId" ):
                return visitor.visitId(self)
            else:
                return visitor.visitChildren(self)



    def term(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = lambdaParser.TermContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_term, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                localctx = lambdaParser.TermParenthesisContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 44
                self.match(lambdaParser.T__2)
                self.state = 45
                self.term(0)
                self.state = 46
                self.match(lambdaParser.T__3)
                pass
            elif token in [5]:
                localctx = lambdaParser.AbstractionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 48
                self.match(lambdaParser.T__4)
                self.state = 49
                localctx.left = self.match(lambdaParser.ID)
                self.state = 50
                self.match(lambdaParser.T__1)
                self.state = 51
                localctx.right = self.term(4)
                pass
            elif token in [8]:
                localctx = lambdaParser.IdContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 52
                self.match(lambdaParser.ID)
                pass
            elif token in [7]:
                localctx = lambdaParser.NumContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 53
                self.match(lambdaParser.NUM)
                pass
            elif token in [6]:
                localctx = lambdaParser.OpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 54
                self.match(lambdaParser.OP)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 61
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = lambdaParser.ApplicationContext(self, lambdaParser.TermContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_term)
                    self.state = 57
                    if not self.precpred(self._ctx, 5):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                    self.state = 58
                    self.term(6) 
                self.state = 63
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[3] = self.term_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def term_sempred(self, localctx:TermContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 5)
         




